@@ -1,0 +1,30 @@
+package Date::Holidays::Adapter::PL;
+
+use strict;
+use warnings;
+use vars qw($VERSION);
+use Error qw(:try);
+
+use base 'Date::Holidays::Adapter';
+use Date::Holidays::Exception::UnsupportedMethod;
+
+$VERSION = '0.19';
+
+sub holidays {
+    throw Date::Holidays::Exception::UnsupportedMethod('holidays');
+    return;
+}
+
+sub is_holiday {
+    my ($self, %params) = @_;
+
+    my $sub = $self->{_adaptee}->can('is_pl_holiday');
+
+    if ($sub) {
+        return &{$sub}($params{'year'}, $params{'month'}, $params{'day'});
+    } else {
+        return;
+    }
+}
+
+1;
