@@ -1,5 +1,10 @@
 Changes file for Date-Holidays
 
+- Added adapters for:
+    Date::Holidays::CN
+    Date::Holidays::KR
+    Date::Holidays::PL
+
 0.19 2014.08.27 bug fix release, update not required (see below)
 
 - This release addressed reports on failing tests for perl 5.21
